--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "better-sqlite3": "^9.6.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "prisma": "^6.17.1",
