--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "allowImportingTsExtensions": true,
     "allowJs": true,
     "outDir": "dist",
-    "types": ["node"],
+    "types": [],
     "baseUrl": "src"
   },
   "include": ["src/**/*", "scripts/**/*", "types.d.ts"],
