--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "guhd-eats-bot",
   "version": "1.0.0",
   "description": "GUHD EATS Discord bot with VP economy system",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "type": "module",
   "scripts": {
     "dev": "node src/index.js",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "postinstall": "node -e \"try{require('better-sqlite3');}catch(e){process.exit(0)}\" || npm rebuild better-sqlite3",
     "test": "vitest run --config vitest.config.js",
     "test:watch": "vitest --config vitest.config.js",
