--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "node src/index.js",
     "build": "tsc -p tsconfig.json && node scripts/generate-runtime-entry.mjs",
-    "start": "node dist/src/index.js",
+    "preflight": "node scripts/validate-roulette-deps.js",
+    "start": "npm run preflight && node dist/src/index.js",
     "postinstall": "node -e \"try{require('better-sqlite3');}catch(e){process.exit(0)}\" || npm rebuild better-sqlite3",
     "test": "vitest run --config vitest.config.js",
     "test:watch": "vitest --config vitest.config.js",
