Eliminate fallback: enforce cinematic-only roulette rendering
BREAKING CHANGE: Remove all LITE_TEXT fallback logic

Changes:
1. Dockerfile:
   - Add native canvas dependencies (Cairo, Pango, libjpeg, giflib) to builder
   - Add runtime libraries to runner stage
   - Ensures canvas can compile and run in Docker

2. scripts/validate-roulette-deps.js (STRICT MODE):
   - Auto-install with retries (up to 3 attempts)
   - Perform actual test render with GIF encoding
   - Exit with code 1 on failure (fail deployment)
   - Verify createCanvas, GIF encoding, and buffer generation

3. src/roulette/safe-animation.js (NO FALLBACK):
   - Remove safeAnimateLiteMode and isCinematicAvailable
   - Add validateCinematicAnimation with test rendering
   - generateCinematicSpin throws error if unavailable
   - getAnimationStatus returns DISABLED instead of LITE_TEXT

4. src/roulette/robust-manager.js:
   - Remove USE_CINEMATIC_ANIMATION toggle
   - Remove all fallback to lite mode logic
   - Refund VP and show error message on animation failure
   - No results displayed if animation fails

5. Remove lite mode functions:
   - Deleted animateLiteMode from cinematic-animation.js
   - Deleted animateLiteMode from canvas-animation.js

6. src/commands/roulette.js:
   - Check animation availability before allowing play
   - Show clear error if dependencies missing
   - Rules always viewable

7. src/index.js:
   - Validate cinematic animation on startup
   - Log critical error if disabled
   - Bot continues running (other commands work)

8. package.json & start.sh:
   - Remove preflight from runtime start
   - Validation happens during Docker build only

Behavior:
- Roulette ONLY uses cinematic 3D animation or errors
- No text-based fallback exists
- Users get refunds if animation fails
- Clear admin logging for missing dependencies
- Bot remains functional for other commands

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node src/index.js",
     "build": "tsc -p tsconfig.json && node scripts/generate-runtime-entry.mjs",
     "preflight": "node scripts/validate-roulette-deps.js",
-    "start": "npm run preflight && node dist/src/index.js",
+    "start": "node dist/src/index.js",
     "postinstall": "node -e \"try{require('better-sqlite3');}catch(e){process.exit(0)}\" || npm rebuild better-sqlite3",
     "test": "vitest run --config vitest.config.js",
     "test:watch": "vitest --config vitest.config.js",
