--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "better-sqlite3": "^9.6.0",
+    "canvas": "^2.11.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "gifencoder": "^2.0.1",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
