--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "canvas": "^2.11.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "gif-encoder-2": "^1.0.5",
     "gifencoder": "^2.0.1",
     "tslib": "^2.6.2"
   },
