--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,156 @@
+# Docker Ignore File for Railway Optimization
+# Excludes unnecessary files from Docker build context
+
+# Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist
+build
+coverage
+.nyc_output
+
+# Environment files
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Version control
 .git
 .gitignore
+.gitattributes
+
+# Documentation
 *.md
+docs/
+README*
+LICENSE*
+
+# Testing
+/tests
+/test
+*.test.js
+*.spec.js
+coverage/
+
+# Development files
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime files
+*.pid
+*.seed
+*.pid.lock
+
+# Cache directories
+.cache
+.npm
+.eslintcache
+.parcel-cache
+
+# Railway files
+.railway
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# Railway deployment artifacts
+railway-deploy.log
+deployment-logs/
+
+# Local database files
+*.db
+*.sqlite
+*.sqlite3
 data/*.db
 data/*.db-journal
-tests/
-coverage/
+
+# Editor files
 .vscode/
 .idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Railway specific
+railway.json.backup
+.railway-backup/
