--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
