--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preflight:railway": "node scripts/system-requirements.js",
     "start": "node dist/src/index.js",
     "start:health": "node /health-check.js & node dist/src/index.js",
-    "postinstall": "node -e \"try{require('better-sqlite3');}catch(e){process.exit(0)}\" || npm rebuild better-sqlite3",
+    "postinstall": "prisma generate || echo '⚠️ Prisma generate warning (non-fatal)'",
     "test": "vitest run --config vitest.config.js",
     "test:watch": "vitest --config vitest.config.js",
     "prisma:generate": "prisma generate",
