Fix build: Update tsconfig.json outDir to match package.json main entry
- Set outDir to './dist/src' to match package.json#main (dist/src/index.js)
- Add explicit noEmit: false to ensure TypeScript emits compiled files
- Fixes 'Build output not found' error during build process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "./dist",
+    "noEmit": false, // [AI FIX]: Explicitly ensure TypeScript emits compiled files
+    "outDir": "./dist/src", // [AI FIX]: Output directory matches package.json#main (dist/src/index.js)
     "rootDir": "./src",
     "typeRoots": ["./node_modules/@types", ".", "src/types"],
     "types": [],
