--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "preflight:railway": "node scripts/system-requirements.js",
     "start": "node dist/src/index.js",
     "start:health": "node /health-check.js & node dist/src/index.js",
-    "postinstall": "prisma generate || echo '⚠️ Prisma generate warning (non-fatal)'",
+    "postinstall": "node scripts/prisma-generate.cjs || echo '⚠️ Prisma generate warning (non-fatal)'",
     "test": "vitest run --config vitest.config.js",
     "test:watch": "vitest --config vitest.config.js",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "node scripts/prisma-generate.cjs",
+    "prisma:validate": "node scripts/validate-prisma.js",
+    "prisma:validate-config": "node scripts/validate-prisma.js && prisma validate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "seed": "node scripts/seed.js",
