--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "author": "GUHD EATS",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "5.21.1",
     "better-sqlite3": "^9.6.0",
     "canvas": "^2.11.2",
     "discord.js": "^14.14.1",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "prisma": "^5.17.0",
+    "prisma": "5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^1.1.0"
